[tool.poetry]
name = "action-tester"
version = "0.1.8"
description = ""
authors = ["Robin Aly <robin.aly@nedap.com>"]
readme = "README.md"
packages = [{include = "action_tester"}]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.10.0"
pytest = "^7.2.0"


[tool.poetry.group.dev.dependencies]
python-kacl = "^0.2.30"
pandera = "^0.13.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
